[ARIES-1503] attempt to fix current code
git-svn-id: https://svn.apache.org/repos/asf/aries/trunk@1738740 13f79535-47bb-0310-9956-ffa450edef68